force-app/main/default/objects/WorkOrder/fields/DescricaoAtividade4__c.field-meta.xml
<CustomField>
    <fullName>DescricaoAtividade4__c</fullName>
    <description>Campo para exibir a descrição da atividade de &quot;LIMPEZAS&quot;.</description>
    <formula>&quot; LIMPEZAS: Módulos FV, inversores e cubículos de transformação.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição da Atividade</label>
    <type>Text</type>
</CustomField>