force-app/main/default/objects/WorkOrder/fields/DescricaoMRTOutra__c.field-meta.xml
<CustomField>
    <fullName>DescricaoMRTOutra__c</fullName>
    <description>Campo para descrever o valor de voltagem do disjuntor.</description>
    <label>Descrição de MRT ou Outra:</label>
    <type>TextArea</type>
</CustomField>