force-app/main/default/objects/WorkOrder/fields/DescricaoOutras__c.field-meta.xml
<CustomField>
    <fullName>DescricaoOutras__c</fullName>
    <description>Campo para descrição quando a opção for outras.</description>
    <label>Descrição de outras:</label>
    <type>TextArea</type>
</CustomField>