force-app/main/default/objects/WorkOrder/fields/Diagnostico1__c.field-meta.xml
<CustomField>
    <fullName>Diagnostico1__c</fullName>
    <description>Campo para descrever Campo para descrever.</description>
    <label>Diagnóstico</label>
    <type>TextArea</type>
</CustomField>