force-app/main/default/objects/WorkOrder/fields/Diagnostico2__c.field-meta.xml
<CustomField>
    <fullName>Diagnostico2__c</fullName>
    <description>Campo para descrever Diagnóstico.</description>
    <label>Diagnóstico</label>
    <type>TextArea</type>
</CustomField>