force-app/main/default/objects/WorkOrder/fields/DiagonaisForamInstaladas__c.field-meta.xml
<CustomField>
    <fullName>DiagonaisForamInstaladas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Diagonais foram instaladas?&quot; sim ou não.</description>
    <label>Diagonais foram instaladas?</label>
    <type>Checkbox</type>
</CustomField>