force-app/main/default/objects/WorkOrder/fields/DiasTrabalhados__c.field-meta.xml
<CustomField>
    <fullName>DiasTrabalhados__c</fullName>
    <description>Campo para definir os Dias trabalhados.</description>
    <label>Dias trabalhados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>