force-app/main/default/objects/WorkOrder/fields/DisjuntorConformeProjeto__c.field-meta.xml
<CustomField>
    <fullName>DisjuntorConformeProjeto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Disjuntor está conforme o projeto?&quot; sim ou não.</description>
    <label>Disjuntor está conforme o projeto?</label>
    <type>Checkbox</type>
</CustomField>