force-app/main/default/objects/WorkOrder/fields/DispositivoProblema1__c.field-meta.xml
<CustomField>
    <fullName>DispositivoProblema1__c</fullName>
    <description>Campo para descrever Dispositivo com problema.</description>
    <label>Dispositivo com problema</label>
    <length>255</length>
    <type>Text</type>
</CustomField>