force-app/main/default/objects/WorkOrder/fields/Dist_ncia_do_inversor_ao_obst_culo_prox__c.field-meta.xml
<CustomField>
    <fullName>Dist_ncia_do_inversor_ao_obst_culo_prox__c</fullName>
    <label>Distância do inversor ao obstáculo prox.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>