force-app/main/default/objects/WorkOrder/fields/DistanciaQDGInversor__c.field-meta.xml
<CustomField>
    <fullName>DistanciaQDGInversor__c</fullName>
    <description>Campo para descrever a distância do QDG ao inversor.</description>
    <label>Distância do QDG ao inversor:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>