force-app/main/default/objects/WorkOrder/fields/Eletodutos_chumbados__c.field-meta.xml
<CustomField>
    <fullName>Eletodutos_chumbados__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Eletodutos chumbados nas caixas de passagem?&quot; sim ou não</description>
    <label>Eletodutos chumbados  caixa de passagem?</label>
    <type>Checkbox</type>
</CustomField>