force-app/main/default/objects/WorkOrder/fields/Eletrocalha_eletrodutos_em_bom_estado__c.field-meta.xml
<CustomField>
    <fullName>Eletrocalha_eletrodutos_em_bom_estado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para defirnir se &quot;Eletrocalha/eletrodutos em bom estado?&quot; sim ou não</description>
    <label>Eletrocalha/eletrodutos em bom estado?</label>
    <type>Checkbox</type>
</CustomField>