force-app/main/default/objects/WorkOrder/fields/Eletroduto_da_Comunicacao_foi_passado__c.field-meta.xml
<CustomField>
    <fullName>Eletroduto_da_Comunicacao_foi_passado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Eletroduto da Comunicação foi passado?&quot;, sim ou não.</description>
    <label>Eletroduto da Comunicação foi passado?</label>
    <type>Checkbox</type>
</CustomField>