force-app/main/default/objects/WorkOrder/fields/Eletroduto_Galvanizado_esta_instalado__c.field-meta.xml
<CustomField>
    <fullName>Eletroduto_Galvanizado_esta_instalado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Eletroduto Galvanizado esta instalado?&quot;, sim ou não.</description>
    <label>Eletroduto Galvanizado esta instalado?</label>
    <type>Checkbox</type>
</CustomField>