force-app/main/default/objects/WorkOrder/fields/Entre_PE_e_cada_uma_das_Fases__c.field-meta.xml
<CustomField>
    <fullName>Entre_PE_e_cada_uma_das_Fases__c</fullName>
    <label>Entre PE e cada uma das Fases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>