force-app/main/default/objects/WorkOrder/fields/Entre_PE_e_Neutro__c.field-meta.xml
<CustomField>
    <fullName>Entre_PE_e_Neutro__c</fullName>
    <label>Entre PE e Neutro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>