force-app/main/default/objects/WorkOrder/fields/Entre_String_2_positivo_e_negativo__c.field-meta.xml
<CustomField>
    <fullName>Entre_String_2_positivo_e_negativo__c</fullName>
    <label>Entre String 2 positivo e negativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>