force-app/main/default/objects/WorkOrder/fields/Equipe__c.field-meta.xml
<CustomField>
    <fullName>Equipe__c</fullName>
    <label>Equipe:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Propria</fullName>
            </value>
            <value>
                <fullName>Terceiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>