force-app/main/default/objects/WorkOrder/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Campo para obter o campo estado da conta relacionada.</description>
    <formula>IF(  Account.BillingState   != null,   Account.BillingState   ,   Account.ShippingState  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado</label>
    <type>Text</type>
</CustomField>