force-app/main/default/objects/WorkOrder/fields/EstrutInstaladaNorteVerdadeiro__c.field-meta.xml
<CustomField>
    <fullName>EstrutInstaladaNorteVerdadeiro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Estrut. instalada para Norte Verdadeiro?&quot; sim ou não.</description>
    <label>Estrut. instalada para Norte Verdadeiro?</label>
    <type>Checkbox</type>
</CustomField>