force-app/main/default/objects/WorkOrder/fields/Estrutura_Aterrada__c.field-meta.xml
<CustomField>
    <fullName>Estrutura_Aterrada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;A estrutura está aterrada?&quot;, sim ou não</description>
    <label>A estrutura está aterrada?</label>
    <type>Checkbox</type>
</CustomField>