force-app/main/default/objects/WorkOrder/fields/Estrutura_do_Inversor_estao_alinhadas__c.field-meta.xml
<CustomField>
    <fullName>Estrutura_do_Inversor_estao_alinhadas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Estrutura do Inversor estão Alinhadas?&quot;, sim ou não.</description>
    <label>Estrutura do Inversor estão alinhadas?</label>
    <type>Checkbox</type>
</CustomField>