force-app/main/default/objects/WorkOrder/fields/EstruturaInstalacao__c.field-meta.xml
<CustomField>
    <fullName>EstruturaInstalacao__c</fullName>
    <description>Campo para definição de estrutura de instalação.</description>
    <label>Estrutura de instalação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solo</fullName>
            </value>
            <value>
                <fullName>Telhado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>