force-app/main/default/objects/WorkOrder/fields/Execucao_de_Aterramento__c.field-meta.xml
<CustomField>
    <fullName>Execucao_de_Aterramento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execução de Aterramento</label>
    <type>Checkbox</type>
</CustomField>