force-app/main/default/objects/WorkOrder/fields/Execucao_de_Aterramento_new__c.field-meta.xml
<CustomField>
    <fullName>Execucao_de_Aterramento_new__c</fullName>
    <label>Execução de Aterramento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concluído</fullName>
            </value>
            <value>
                <fullName>Não informado</fullName>
                <isActive>false</isActive>
                <label>Não informado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>