force-app/main/default/objects/WorkOrder/fields/Existe_alguma_cobertura_para_o_inversor__c.field-meta.xml
<CustomField>
    <fullName>Existe_alguma_cobertura_para_o_inversor__c</fullName>
    <inlineHelpText>Informar SIM ou NÃO</inlineHelpText>
    <label>Existe alguma cobertura para o inversor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>