force-app/main/default/objects/WorkOrder/fields/ForamRetiradasSobrasMaterial__c.field-meta.xml
<CustomField>
    <fullName>ForamRetiradasSobrasMaterial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Foram retiradas as sobras de material?&quot; sim ou não.</description>
    <label>Foram retiradas as sobras de material?</label>
    <type>Checkbox</type>
</CustomField>