force-app/main/default/objects/WorkOrder/fields/FormatoTelhadoSuasDimensoes__c.field-meta.xml
<CustomField>
    <fullName>FormatoTelhadoSuasDimensoes__c</fullName>
    <description>Campo para escolha do tipo de telhado.</description>
    <label>Formato de telhado e suas dimensões:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telha Portuguesa</fullName>
            </value>
            <value>
                <fullName>Telha Marigliense</fullName>
            </value>
            <value>
                <fullName>Telha Colonial</fullName>
            </value>
            <value>
                <fullName>Telha Canadense</fullName>
            </value>
            <value>
                <fullName>Telha Fibrocimento</fullName>
            </value>
            <value>
                <fullName>Telha Alumínio/Termoacústica</fullName>
            </value>
            <value>
                <fullName>Laje</fullName>
            </value>
            <value>
                <fullName>Outras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>