force-app/main/default/objects/WorkOrder/fields/FotoDocumentacao__c.field-meta.xml
<CustomField>
    <fullName>FotoDocumentacao__c</fullName>
    <description>Campo informativo para fotos das documentações necessárias.</description>
    <formula>&quot; Anexar os seguintes documentos ao objeto arquivos: Outorgante, outorgado, procuração e PDF das faturas.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foto da Documentação</label>
    <type>Text</type>
</CustomField>