force-app/main/default/objects/WorkOrder/fields/FotosAnteseDepoisInstalacao__c.field-meta.xml
<CustomField>
    <fullName>FotosAnteseDepoisInstalacao__c</fullName>
    <description>Campo para informar quais arquivos são necessários.</description>
    <formula>&quot; Fotos antes da instalação e fotos depois da instalação&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fotos</label>
    <type>Text</type>
</CustomField>