force-app/main/default/objects/WorkOrder/fields/FotosAnteseDepoisLimpeza__c.field-meta.xml
<CustomField>
    <fullName>FotosAnteseDepoisLimpeza__c</fullName>
    <description>Campo para definir a seção da ordem de trabalho, para auxiliar o técnico em campo.</description>
    <formula>&quot; Fotos antes da limpeza e fotos depois da limpeza. &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fotos</label>
    <type>Text</type>
</CustomField>