force-app/main/default/objects/WorkOrder/fields/FotosGarantiaAterramento__c.field-meta.xml
<CustomField>
    <fullName>FotosGarantiaAterramento__c</fullName>
    <description>Campo para auxiliar o técnico sobre quais imagens ele deve adicionar em arquivos.</description>
    <formula>&quot;Aterramento	: Tensão (CC) do positivo das strings ao terra da carcaça, tensão (CC) do negativo das strings ao terra da carcaça.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fotos</label>
    <type>Text</type>
</CustomField>