force-app/main/default/objects/WorkOrder/fields/FotosGarantiaCorrenteAlternada__c.field-meta.xml
<CustomField>
    <fullName>FotosGarantiaCorrenteAlternada__c</fullName>
    <description>Campo para auxiliar o técnico sobre quais imagens ele deve adicionar em arquivos.</description>
    <formula>&quot;Corrente Alternada (CA) : Tensão CA entre as fases, tensão CA entre fases e neutro e	tensão CA entre neutro e terra.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fotos</label>
    <type>Text</type>
</CustomField>