force-app/main/default/objects/WorkOrder/fields/FotosGarantiaCorrenteContinua__c.field-meta.xml
<CustomField>
    <fullName>FotosGarantiaCorrenteContinua__c</fullName>
    <description>Campo para auxiliar o técnico sobre quais imagens ele deve adicionar em arquivos.</description>
    <formula>&quot; Corrente Contínua (com as strings desconectadas do inversor)	: &quot; &amp;
&quot; Tensão das strings do MPPT 1, tensão das strings do MPPT 2, tensão das strings do MPPT 3 e tensão das strings do MPPT 4.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fotos</label>
    <type>Text</type>
</CustomField>