force-app/main/default/objects/WorkOrder/fields/FotosGarantiaInstalacao__c.field-meta.xml
<CustomField>
    <fullName>FotosGarantiaInstalacao__c</fullName>
    <description>Campo para definir a seção da ordem de trabalho, para auxiliar o técnico em campo.</description>
    <formula>&quot;Instalação	: Foto ampla de frente da instalação, foto da etiqueta com o número de série, &quot; &amp;
&quot;foto mostrando o erro/problema e foto de baixo do inversor (Conectores).&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fotos</label>
    <type>Text</type>
</CustomField>