force-app/main/default/objects/WorkOrder/fields/FotosGarantiaMedir__c.field-meta.xml
<CustomField>
    <fullName>FotosGarantiaMedir__c</fullName>
    <description>Campo para auxiliar o técnico sobre quais imagens ele deve adicionar em arquivos.</description>
    <formula>&quot;Medir continuidade (ohms) (No conector do inversor, strings desconectadas e CA desconectado):&quot; &amp;
&quot;Entre String 1 positivo e negativo, entre String 2 positivo e negativo, entre PE e cada uma das Fases e entre PE e Neutro.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fotos</label>
    <type>Text</type>
</CustomField>