force-app/main/default/objects/WorkOrder/fields/FotosGoteira__c.field-meta.xml
<CustomField>
    <fullName>FotosGoteira__c</fullName>
    <description>Campo para definir a seção da ordem de trabalho, para auxiliar o técnico em campo.</description>
    <formula>&quot; Fotos da evidência da goteira e fotos depois do reparo&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fotos</label>
    <type>Text</type>
</CustomField>