force-app/main/default/objects/WorkOrder/fields/FotosRetirarInversor__c.field-meta.xml
<CustomField>
    <fullName>FotosRetirarInversor__c</fullName>
    <description>Campo para definir a seção da ordem de trabalho, para auxiliar o técnico em campo.</description>
    <formula>&quot; Fotos antes da retirada e fotos depois da retirada&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fotos</label>
    <type>Text</type>
</CustomField>