force-app/main/default/objects/WorkOrder/fields/FotosSubstituicaoModulo__c.field-meta.xml
<CustomField>
    <fullName>FotosSubstituicaoModulo__c</fullName>
    <description>Campo para definir a seção da ordem de trabalho, para auxiliar o técnico em campo.</description>
    <formula>&quot; Fotos antes da retirada do módulo, fotos depois da retirada do módulo, fotos antes da instalação e fotos depois da instalação&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fotos</label>
    <type>Text</type>
</CustomField>