force-app/main/default/objects/WorkOrder/fields/Frequencia_de_ocorrencia__c.field-meta.xml
<CustomField>
    <fullName>Frequencia_de_ocorrencia__c</fullName>
    <label>Freqüência de ocorrência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>