force-app/main/default/objects/WorkOrder/fields/HaAterramentoQuadroMedicao__c.field-meta.xml
<CustomField>
    <fullName>HaAterramentoQuadroMedicao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Há Aterramento do Quadro de Medição?&quot; sim ou não.</description>
    <label>Há Aterramento do Quadro de Medição?</label>
    <type>Checkbox</type>
</CustomField>