force-app/main/default/objects/WorkOrder/fields/HorasTrabalhadas__c.field-meta.xml
<CustomField>
    <fullName>HorasTrabalhadas__c</fullName>
    <description>Campo para determinar as horas trabalhadas.</description>
    <label>Horas trabalhadas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>