force-app/main/default/objects/WorkOrder/fields/ImagemAuxiliarMedidas__c.field-meta.xml
<CustomField>
    <fullName>ImagemAuxiliarMedidas__c</fullName>
    <defaultValue>&quot;https://enrz.my.salesforce.com/sfc/p/5e000003RosA/a/5e000000p0QJ/HHDN9s1jA8F6KaDv0g4sgVKXRcGpd_r2smAB_uRlHBQ&quot;</defaultValue>
    <description>URL auxiliar para entendimento do técnico sobre cada medida.</description>
    <label>Imagem Auxiliar para Medidas:</label>
    <type>Url</type>
</CustomField>