force-app/main/default/objects/WorkOrder/fields/ImagemTelhadoSuasDimensoes__c.field-meta.xml
<CustomField>
    <fullName>ImagemTelhadoSuasDimensoes__c</fullName>
    <defaultValue>&quot;https://enrz.my.salesforce.com/sfc/p/5e000003RosA/a/5e000000p0QE/M3Vpz6Mr5oYwzONPQ29W0PHSsPTZsfFVMVIgLgqtNQo&quot;</defaultValue>
    <description>URL de auxilio para formato de telhado e suas dimensões.</description>
    <label>Imagem de telhados e suas dimensões:</label>
    <type>Url</type>
</CustomField>