force-app/main/default/objects/WorkOrder/fields/InclinacaoModulosConformeProjeto__c.field-meta.xml
<CustomField>
    <fullName>InclinacaoModulosConformeProjeto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Inclinação dos módulos conforme projeto?&quot; sim ou não.</description>
    <label>Inclinação dos módulos conforme projeto?</label>
    <type>Checkbox</type>
</CustomField>