force-app/main/default/objects/WorkOrder/fields/Instalacao_de_Estrutura_de_Fixacao__c.field-meta.xml
<CustomField>
    <fullName>Instalacao_de_Estrutura_de_Fixacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instalação de Estrutura de Fixação</label>
    <type>Checkbox</type>
</CustomField>