force-app/main/default/objects/WorkOrder/fields/Instalacao_de_Estrutura_de_Fixacao_new__c.field-meta.xml
<CustomField>
    <fullName>Instalacao_de_Estrutura_de_Fixacao_new__c</fullName>
    <label>Instalação de Estrutura de Fixação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concluído</fullName>
            </value>
            <value>
                <fullName>Não informado</fullName>
                <isActive>false</isActive>
                <label>Não informado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>