force-app/main/default/objects/WorkOrder/fields/InstalacaoAssociada__c.field-meta.xml
<CustomField>
    <fullName>InstalacaoAssociada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para associar ordem de trabalho a instalação.</description>
    <label>Instalação</label>
    <referenceTo>Instalacao__c</referenceTo>
    <relationshipLabel>Ordens de trabalho</relationshipLabel>
    <relationshipName>OrdensTrabalho</relationshipName>
    <type>Lookup</type>
</CustomField>