force-app/main/default/objects/WorkOrder/fields/InternetInstalada__c.field-meta.xml
<CustomField>
    <fullName>InternetInstalada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Internet está instalada?&quot; sim ou não.</description>
    <label>Internet está instalada?</label>
    <type>Checkbox</type>
</CustomField>