force-app/main/default/objects/WorkOrder/fields/InternetMonitoramento__c.field-meta.xml
<CustomField>
    <fullName>InternetMonitoramento__c</fullName>
    <description>Campo para definição de internet para monitoramento.</description>
    <label>Internet para monitoramento?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Via cabo</fullName>
            </value>
            <value>
                <fullName>Via Wifi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>