force-app/main/default/objects/WorkOrder/fields/Inversor_aterrado__c.field-meta.xml
<CustomField>
    <fullName>Inversor_aterrado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;O inversor está aterrado ?&quot; sim ou não.</description>
    <label>O inversor está aterrado?</label>
    <type>Checkbox</type>
</CustomField>