force-app/main/default/objects/WorkOrder/fields/InversorConectado__c.field-meta.xml
<CustomField>
    <fullName>InversorConectado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se o inversor está conectado.</description>
    <label>Inversor Conectado?</label>
    <type>Checkbox</type>
</CustomField>