force-app/main/default/objects/WorkOrder/fields/Inversores_alinhados__c.field-meta.xml
<CustomField>
    <fullName>Inversores_alinhados__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Inversores estão alinhados?&quot; sim ou não.</description>
    <label>Inversores estão alinhados?</label>
    <type>Checkbox</type>
</CustomField>