force-app/main/default/objects/WorkOrder/fields/InversoresComAdesivoEnerzee__c.field-meta.xml
<CustomField>
    <fullName>InversoresComAdesivoEnerzee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Inversores com adesivo Enerzee?&quot; sim ou não.</description>
    <label>Inversores com adesivo Enerzee?</label>
    <type>Checkbox</type>
</CustomField>