force-app/main/default/objects/WorkOrder/fields/InversoresLigados__c.field-meta.xml
<CustomField>
    <fullName>InversoresLigados__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Inversores estão ligados?&quot; sim ou não.</description>
    <label>Inversores estão ligados?</label>
    <type>Checkbox</type>
</CustomField>