force-app/main/default/objects/WorkOrder/fields/InversoresLimpos__c.field-meta.xml
<CustomField>
    <fullName>InversoresLimpos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Inversores estão limpos?&quot; sim ou não</description>
    <label>Inversores estão limpos?</label>
    <type>Checkbox</type>
</CustomField>