force-app/main/default/objects/WorkOrder/fields/LeitoEntreQGBTeTrafoAterrado__c.field-meta.xml
<CustomField>
    <fullName>LeitoEntreQGBTeTrafoAterrado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Leito entre QGBT e Trafo aterrado?&quot; sim ou não.</description>
    <label>Leito entre QGBT e Trafo aterrado?</label>
    <type>Checkbox</type>
</CustomField>