force-app/main/default/objects/WorkOrder/fields/Local_de_Instala_o__c.field-meta.xml
<CustomField>
    <fullName>Local_de_Instala_o__c</fullName>
    <label>Local de Instalação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interno</fullName>
            </value>
            <value>
                <fullName>Externo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>