force-app/main/default/objects/WorkOrder/fields/LocalInversor__c.field-meta.xml
<CustomField>
    <fullName>LocalInversor__c</fullName>
    <description>Campo para esclarecer o local do inversor.</description>
    <label>Local do inversor:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>