force-app/main/default/objects/WorkOrder/fields/LocalPossuiGerador__c.field-meta.xml
<CustomField>
    <fullName>LocalPossuiGerador__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se o local possui gerador sim ou não.</description>
    <label>O Local possui gerador?</label>
    <type>Checkbox</type>
</CustomField>