force-app/main/default/objects/WorkOrder/fields/maior_que_1_2m__c.field-meta.xml
<CustomField>
    <fullName>maior_que_1_2m__c</fullName>
    <inlineHelpText>Informar SIM ou NÃO</inlineHelpText>
    <label>É maior que 1,2m?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>