force-app/main/default/objects/WorkOrder/fields/maior_que_60cm__c.field-meta.xml
<CustomField>
    <fullName>maior_que_60cm__c</fullName>
    <label>É maior que 60cm?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>