force-app/main/default/objects/WorkOrder/fields/ManualOMEnerzeeLocal__c.field-meta.xml
<CustomField>
    <fullName>ManualOMEnerzeeLocal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir se &quot;Manual de O&amp;M Enerzee no local? &quot; sim ou não.</description>
    <label>Manual de O&amp;M Enerzee no local?</label>
    <type>Checkbox</type>
</CustomField>