force-app/main/default/objects/WorkOrder/fields/Marca_do_painel_fotovoltaico__c.field-meta.xml
<CustomField>
    <fullName>Marca_do_painel_fotovoltaico__c</fullName>
    <label>Marca do painel fotovoltaico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>