force-app/main/default/objects/WorkOrder/fields/Materiais_Utilizados__c.field-meta.xml
<CustomField>
    <fullName>Materiais_Utilizados__c</fullName>
    <label>Materiais Utilizados</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manta Asfaltica</fullName>
            </value>
            <value>
                <fullName>Selante PU</fullName>
            </value>
            <value>
                <fullName>Telhas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>