force-app/main/default/objects/WorkOrder/fields/MaterialEstrutura__c.field-meta.xml
<CustomField>
    <fullName>MaterialEstrutura__c</fullName>
    <description>Campo para definir o material da estrutura do local.</description>
    <label>Material da estrutura:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Madeira</fullName>
            </value>
            <value>
                <fullName>Metálica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>