force-app/main/default/objects/WorkOrder/fields/MaterialUsadoLimpeza__c.field-meta.xml
<CustomField>
    <fullName>MaterialUsadoLimpeza__c</fullName>
    <description>Campo para selecionar os materiais utilizados para o serviço.</description>
    <label>Material usado para limpeza</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vassoura</fullName>
            </value>
            <value>
                <fullName>Sabão líquido neutro</fullName>
            </value>
            <value>
                <fullName>Lavadora jato de alta pressão</fullName>
            </value>
            <value>
                <fullName>Outros Materiais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>