force-app/main/default/objects/WorkOrder/fields/Medida_D__c.field-meta.xml
<CustomField>
    <fullName>Medida_D__c</fullName>
    <description>Campo para determinar as medidas.</description>
    <label>Medida (D):</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>