force-app/main/default/objects/WorkOrder/fields/MedidasLargura__c.field-meta.xml
<CustomField>
    <fullName>MedidasLargura__c</fullName>
    <description>Campo para descrever a medida da largura.</description>
    <label>Medidas Largura:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>