force-app/main/default/objects/WorkOrder/fields/MedidasPeDireto__c.field-meta.xml
<CustomField>
    <fullName>MedidasPeDireto__c</fullName>
    <description>Campo para descrever a medida do pé direto.</description>
    <label>Medidas Pé direto:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>