force-app/main/default/objects/WorkOrder/fields/menor_ou_igual_a_1_2m__c.field-meta.xml
<CustomField>
    <fullName>menor_ou_igual_a_1_2m__c</fullName>
    <description>Informar SIM ou NÃO</description>
    <label>É menor ou igual a 1,2m?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>