force-app/main/default/objects/WorkOrder/fields/menor_ou_igual_a_60cm__c.field-meta.xml
<CustomField>
    <fullName>menor_ou_igual_a_60cm__c</fullName>
    <label>É menor ou igual a 60cm?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>