force-app/main/default/objects/WorkOrder/fields/Mobilizacao_Conferencia_de_Materiais__c.field-meta.xml
<CustomField>
    <fullName>Mobilizacao_Conferencia_de_Materiais__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobilização/Conferência de Materiais</label>
    <type>Checkbox</type>
</CustomField>