force-app/main/default/objects/WorkOrder/fields/Modelo_do_Inversor__c.field-meta.xml
<CustomField>
    <fullName>Modelo_do_Inversor__c</fullName>
    <label>Modelo do Inversor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>